# dot1x-automator

./: BUILD-GUIDE.md  README-DESKTOP.md  README.md  Test.py  index.html  network_management_suite.py  network_management_suite_fixed.py  package-lock.json  package-scripts.json  package.json  tailwind.config.ts
bridge-server/: README.md  bridge_server.py  rebond_fetch_config.py  requirements.txt  start.bat  start.sh
public/: BUILD-GUIDE.md  manifest.json  sw.js
public/scripts/: rebond_fetch_config.py  robont_fetch_config.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AppSidebar.tsx  ConfigurationOutput.tsx  ConfigurationParser.tsx  DesktopCompiler.tsx  DetailedLogger.tsx  FileUpload.tsx  HelpSection.tsx  InterfaceList.tsx  MultiSwitchBatch.tsx  PWAInstallPrompt.tsx  PrerequisitesWizard.tsx  SwitchInfo.tsx  SystemPrechecks.tsx
src/hooks/: usePWA.tsx
src/lib/: bridge.ts  storage.ts
src/pages/: Dashboard.tsx  DeviceConnection.tsx  Index.tsx
